--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps?ll=47.164574,27.577797&z=16&t=m&hl=en-US&gl=US&mapclient=embed&cid=4920499553187080628" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5425.313775356247!2d27.577797!3d47.164574!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40cafb707f45eebb%3A0x44492046112f29b4!2sNational%20University%20of%20Arts%20George%20Enescu!5e0!3m2!1sen!2sus!4v1731570870183!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
