--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Johan Stanworth</h2>
-            <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
+            <h2>Hey, I'm Martinas Samira</h2>
+            <p class="mb-0">Freelance Creative &amp; Professional Illustrator</p>
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -106,7 +106,7 @@
                 <h3>Boxed Water</h3>
                 <span>Web</span>
               </div>
-              <img class="img-fluid" src="img/img_1.jpg">
+              <img class="img-fluid" src="img/img_1.png">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -115,7 +115,7 @@
                 <h3>Build Indoo</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="img/img_2.jpg">
+              <img class="img-fluid" src="img/img_2.png">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -124,7 +124,7 @@
                 <h3>Cocooil</h3>
                 <span>Branding</span>
               </div>
-              <img class="img-fluid" src="img/img_3.jpg">
+              <img class="img-fluid" src="img/img_3.png">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -133,7 +133,7 @@
                 <h3>Nike Shoe</h3>
                 <span>Design</span>
               </div>
-              <img class="img-fluid" src="img/img_4.jpg">
+              <img class="img-fluid" src="img/img_4.png">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -142,7 +142,7 @@
                 <h3>Kitchen Sink</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="img/img_5.jpg">
+              <img class="img-fluid" src="img/img_5.png">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -151,7 +151,7 @@
                 <h3>Amazon</h3>
                 <span>brandingn</span>
               </div>
-              <img class="img-fluid" src="img/img_6.jpg">
+              <img class="img-fluid" src="img/img_6.png">
             </a>
           </div>
         </div>
